Other changes about script.js and web pages look

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;700&family=Bebas+Neue&family=Dosis:wght@200..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -28,24 +31,31 @@
         <div class="left-header">
           <i class="fa-solid fa-magnifying-glass"></i>
           <h3>IntellInvestigate</h3>
-          
         </div>
         <div class="right-header">
           <!-- <input id="query-lei" type="text" placeholder="Insert LEI code" /> -->
-          <i class="fa-brands fa-linkedin"><a href="https://it.linkedin.com/in/carmelo-lorenzo-giannusa-2a8a20220"></a></i>
-          <i class="fa-brands fa-github"><a href="https://github.com/clgiadev"></a></i>
-          <a href="https://primesail.it/about/people/"><img src="Icon_black_sails_transparent_background.png" alt=""></a>
+          <a
+            href="https://it.linkedin.com/in/carmelo-lorenzo-giannusa-2a8a20220"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/clgiadev" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://primesail.it/about/people/" target="_blank"
+            ><img src="Icon_black_sails_transparent_background.png" alt=""
+          /></a>
         </div>
       </header>
       <main>
         <menu>
           <p>Sanctions Search:</p>
-            <input
-              id="query-lei"
-              type="text"
-              placeholder="Insert Legal Entity Name..."
-            />
-            <button onclick="sendRequest()">Go</button>
+          <input
+            id="query-lei"
+            type="text"
+            placeholder="Insert Legal Entity Name..."
+          />
+          <button onclick="sendRequest()">Go</button>
           <!-- <div class="menu-date">
             <span>FROM: </span>
             <input id="start" type="date" />
@@ -55,7 +65,7 @@
         </menu>
 
         <div class="result" id="result">
-          <h2>SANCTIONS'S INFORMATIONS ABOUT: </h2>
+          <h2>INFORMATIONS ABOUT SANCTIONS</h2>
           <p id="sanction"></p>
         </div>
       </main>
@@ -64,7 +74,6 @@
         <div class="footer-r">
           <p>Created by <a href="#"> Lorenzo</a></p>
         </div>
-        
       </footer>
     </div>
     <script src="script.js"></script>
