--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
             type="text"
             placeholder="Insert Legal Entity Name..."
           />
+          <div class="nation-choice">
+            <p>Geographic Area: </p>
+            <select name="" id="">
+              <option value="US">United States</option>
+              <option value="UE">Europe</option>
+            </select>
+          </div>
           <button onclick="sendRequest()">Go</button>
         </menu>
       </div>
