Some changes about Read More button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           />
           <div class="nation-choice">
             <p>Geographic Area: </p>
-            <select name="" id="">
+            <select name="" id="nation-choice">
               <option value="US">United States</option>
               <option value="UE">Europe</option>
             </select>
